@@ -216,10 +216,12 @@ bool matching_prefix(node_entry const& n, int mask, int prefix, int bucket_index
 
 node_id generate_prefix_mask(int bits)
 {
+	TORRENT_ASSERT(bits >= 0);
+	TORRENT_ASSERT(bits <= 160);
 	node_id mask(0);
 	int b = 0;
 	for (; b < bits - 7; b += 8) mask[b/8] |= 0xff;
-	mask[b/8] |= (0xff << (8 - (bits&7))) & 0xff;
+	if (bits < 160) mask[b/8] |= (0xff << (8 - (bits&7))) & 0xff;
 	return mask;
 }
 
